frontend/src/App.css
@font-face {
  font-family: 'Satoshi';
  src: url('/path-to-fonts/Satoshi.woff2') format('woff2'),
       url('/path-to-fonts/Satoshi.woff') format('woff');
}

#root {
  max-width: none;
  margin: 0;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

@media (max-width: 639px) {
  :root {
    /* animation */
    --animation-titleStartX: 46.875rem;
    --animation-navStartY: -4.375rem;
    --animation-scrollEnd: 1000;
    --animation-overlapEnd: 1500;
    --animation-scrubScale: 10;
    --animation-wordStart: 100;

    --animation-teamEnterXPercent: 12;
    --animation-teamEnterDuration: 1.2;
    --animation-teamStaggerEach: 0.22;
    --animation-teamStaggerAmount: 0.9;

    /* layout */
    --layout-titleFontSize: 5.5rem;
    --layout-mediumFontSize: 3.5rem;
    --layout-headerTitleFontSize: 12.5rem;
    --layout-subtitleFontSize: 1.5rem;
    --layout-footerFontSize: 0.8125rem;
    --layout-teamFontSize: 0.9375rem;
    --layout-aboutTitleFontSize: 2.5rem;
    --layout-bodyFontSize: 1.2rem;
    --layout-textHeaderFontSize: 1.25rem;

    --layout-paddingSmall: 0.625rem;
    --layout-paddingBody: 3.125rem;

    --layout-fullHeight: 100dvh;
    --layout-doubleFullHeight: 200dvh;
    --layout-aboutHeight: 190dvh;
    --layout-teamHeight: 100dvh;

    --layout-textBoxMargin: 500px;

    --layout-marginSmallLeft: 2dvw;
    --layout-marginSmallTop: 20dvh;
    --layout-marginSmallBottom: 2dvh;

    --layout-marginExtraSmallLeft: 5dvh;
    --layout-marginExtraSmallRight: 5dvh;
    --layout-marginExtraSmallTop: 5dvh;
    --layout-marginExtraSmallBottom: 5dvh;

    --layout-paddingLeft: 0.625rem;
    --layout-paddingRight: 0.625rem;
    --layout-paddingTop: 0.625rem;
    --layout-paddingBottom: 0.625rem;

    --layout-paddingTransitionLeft: 5rem;
    --layout-paddingTransitionRight: 5rem;
    --layout-paddingTransitionTop: 5rem;
    --layout-paddingTransitionBottom: 5rem;

    --layout-aboutFullWidth: 100dvw;
    --layout-aboutGap: 10vw;
    --layout-aboutContentPaddingTop: 2dvh;

    --layout-teamFullWidth: 100%;
    --layout-teamImagesFlexDirection: row;
    --layout-teamImageWidth: 25dvw;
    --layout-teamImageHeight: auto;

    --layout-footerContactTranslateY: -6dvh;
    --layout-footerLinkMargin: 5dvw;
    --layout-footerLinkGap: 5dvw;
    --layout-footerSocialGap: 2dvw;
    --layout-footerSocialIconScale: 1.5;

    --layout-marginBottomXXs: 2dvh;

    --layout-textBoxWidth: 100%;
    --layout-textBoxGap: 5dvh;
    --layout-textBoxLineHeight: 1;
    --layout-textBoxTitleContentGap: 20px;

    --layout-imageVisibility: visible;

    --layout-aboutTitleWrap: wrap;
    --layout-aboutFlexDirection: column;



  }
}

/* ========== Small ≥640px ========== */
@media (min-width: 640px) {
  :root {
    /* animation */
    --animation-titleStartX: 46.875rem;
    --animation-navStartY: -4.375rem;
    --animation-scrollEnd: 1000;
    --animation-overlapEnd: 1500;
    --animation-scrubScale: 10;
    --animation-wordStart: 100;

    --animation-teamEnterXPercent: 12;
    --animation-teamEnterDuration: 1.2;
    --animation-teamStaggerEach: 0.22;
    --animation-teamStaggerAmount: 0.9;

    /* layout */
    --layout-titleFontSize: 12.5rem;
    --layout-mediumFontSize: 6.25rem;
    --layout-headerTitleFontSize: 12.5rem;
    --layout-subtitleFontSize: 3.125rem;
    --layout-aboutTitleFontSize: 3.5rem;
    --layout-footerFontSize: 0.8125rem;
    --layout-teamFontSize: 0.9375rem;
    --layout-bodyFontSize: 1.5625rem;
    --layout-textHeaderFontSize: 1.25rem;

    --layout-paddingSmall: 0.625rem;
    --layout-paddingBody: 3.125rem;

    --layout-fullHeight: 100dvh;
    --layout-doubleFullHeight: 200dvh;
    --layout-aboutHeight: 130dvh;
    --layout-teamHeight: 100dvh;

    --layout-textBoxMargin: 500px;
    --layout-teamImagesFlexDirection: row;

    --layout-marginSmallLeft: 2dvw;
    --layout-marginSmallRight: 2dvw;
    --layout-marginSmallTop: 20dvh;
    --layout-marginSmallBottom: 2dvh;

    --layout-marginExtraSmallLeft: 5dvh;
    --layout-marginExtraSmallRight: 5dvh;
    --layout-marginExtraSmallTop: 5dvh;
    --layout-marginExtraSmallBottom: 5dvh;

    --layout-paddingLeft: 0.625rem;
    --layout-paddingRight: 0.625rem;
    --layout-paddingTop: 0.625rem;
    --layout-paddingBottom: 0.625rem;

    --layout-paddingTransitionLeft: 5rem;
    --layout-paddingTransitionRight: 5rem;
    --layout-paddingTransitionTop: 5rem;
    --layout-paddingTransitionBottom: 5rem;

    --layout-aboutFullWidth: 100dvw;
    --layout-aboutTitleWidth: 50dvw;
    --layout-aboutGap: 5vw;
    --layout-aboutContentPaddingTop: 2dvh;

    --layout-teamFullWidth: 100%;
    --layout-teamImageWidth: 25dvw;
    --layout-teamImageHeight: auto;

    --layout-footerContactTranslateY: -6dvh;
    --layout-footerLinkMargin: 5dvw;
    --layout-footerLinkGap: 5dvw;
    --layout-footerSocialGap: 2dvw;
    --layout-footerSocialIconScale: 1.5;

    --layout-marginBottomXXs: 2dvh;

    --layout-textBoxWidth: 100%;
    --layout-textBoxGap: 5dvh;

    --layout-imageVisibility: visible;

    --layout-aboutTitleWrap: nowrap;
    --layout-aboutFlexDirection: "column"

  }
}
/* ... */

